<!--
  ~ Copyright 2017, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">PRMS</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_program">Maintain Program</string>
    <string name="btn_schedule">Maintain Schedule</string>
    <string name="btn_user">Maintain User</string>
    <string name="welcome">Welcome</string>
    <string name="name">Fullname</string>
    <string name="error_msg">Login Error</string>
    <string name="no_comments">No comments</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="loading_products">Loading products...</string>
    <string name="cd_products_list">Products list</string>
    <string name="cd_comments_list">Comments list</string>
    <string name="cd_product_name">Name of the product</string>
    <string name="action_view">View</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_select">Select</string>
    <string name="title_activity_schedule_programs_list_screen">Browse Program Slots</string>
    <string name="title_activity_user_list_screen">UserListScreen</string>
    <string name="title_activity_user_screen">UserScreen</string>
    <string name="no_records_found">No items found</string>
    <string name="no_records_selected">No item selected</string>
    <string name="radio_program">Radio Program</string>
    <string name="preseenter">Presenter</string>
    <string name="prodcuer">Producer</string>
    <string name="start_date_of_program">Start Date of Program</string>
    <string name="end_date_of_program">End Date of Program</string>
    <string name="no_date_selected">No date selected</string>
    <string name="presenter_producer"><![CDATA[Presenter & Producer]]></string>
    <string name="action_set">Set</string>
    <string name="action_assign">Assign</string>
    <string name="action_done">Done</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter by</string>
    <string name="action_copy">Copy</string>
    <string name="title_activity_Schedule_screen">Maintain Program Slot</string>
    <string name="time">Time</string>
    <string name="presenterproducerscreentitle">Select Producer/Presenter</string>
    <string name="SelectRadioProgramTitle">Select Radio Program</string>


</resources>
