<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".schedule.android.ui.PresenterProducerScreen">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/preseenter"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_reviewselectpresenterproducer_presenter_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textNoSuggestions"
        android:text="@string/no_records_selected"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prodcuer"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reviewselectpresenterproducer_presenter_name" />

    <EditText
        android:id="@+id/tv_reviewselectpresenterproducer_producer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textNoSuggestions"
        android:text="@string/no_records_selected"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:text="@string/filter_by"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/rdo_reviewselectpresenterproducer_filter"
        app:layout_constraintEnd_toStartOf="@+id/rdo_reviewselectpresenterproducer_filter"
        app:layout_constraintTop_toTopOf="@+id/rdo_reviewselectpresenterproducer_filter" />

    <RadioGroup
        android:id="@+id/rdo_reviewselectpresenterproducer_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reviewselectpresenterproducer_producer_name">

        <RadioButton
            android:id="@+id/rdo_reviewselectpresenterproducer_presenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/preseenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rdo_reviewselectpresenterproducer_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prodcuer"
            app:layout_constraintStart_toEndOf="@+id/rdo_reviewselectpresenterproducer_presenter"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_reviewselectpresenterproducer_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdo_reviewselectpresenterproducer_filter">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_reviewselectpresenterproducer_norecoundfound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/no_records_found"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_reviewselectpresenterproducer_list"
        app:layout_constraintStart_toStartOf="@+id/rv_reviewselectpresenterproducer_list"
        app:layout_constraintTop_toTopOf="@+id/rv_reviewselectpresenterproducer_list" />

    <ProgressBar
        android:id="@+id/pb_pp_loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_reviewselectpresenterproducer_list"
        app:layout_constraintStart_toStartOf="@+id/rv_reviewselectpresenterproducer_list"
        app:layout_constraintTop_toTopOf="@+id/rv_reviewselectpresenterproducer_list" />

</android.support.constraint.ConstraintLayout>